@@ -1155,6 +1155,7 @@ dojo.declare("com.nuclearunicorn.game.ui.GamePage", null, {
 			usePercentageResourceValues: false,
 			highlightUnavailable: true,
 			hideSell: false,
+			hideDowngrade: false,
 			hideBGImage: false,
 			tooltipsInRightColumn: false,
 			noConfirm: false,
@@ -1422,6 +1423,7 @@ dojo.declare("com.nuclearunicorn.game.ui.GamePage", null, {
 			usePercentageResourceValues: false,
 			highlightUnavailable: true,
 			hideSell: false,
+			hideDowngrade: false,
 			hideBGImage: false,
 			tooltipsInRightColumn: false,
 			noConfirm: false,
