@@ -2345,7 +2345,9 @@ dojo.declare("classes.ui.btn.StagingBldBtnController", classes.ui.btn.BuildingBt
 		for (var i = 1; i < stages.length; i++){
 			if (i <= stage){
 				//downgrade
-				stageLinks.push( {title: "v", handler: downgradeHandler, enabled: true});
+				if (!this.game.opts.hideDowngrade) {
+					stageLinks.push( {title: "v", handler: downgradeHandler, enabled: true});
+				}
 			} else {
 				//upgrade
 				if (!stages[i].stageUnlocked){
